bgd/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: bgd
  name: bgd
  namespace: bgd
spec:
  host: "bgd.roks-cp4a-2face0433451d5f4f63e8f7ab10f8f12-0000.eu-de.containers.appdomain.cloud"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
